// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DsRadio Component > Snapshot Tests > should match snapshot in radio group context 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiFormGroup-root MuiRadioGroup-root css-1hhgrml-MuiFormGroup-root"
    role="radiogroup"
  >
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
    >
      <span
        class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
      >
        <input
          checked=""
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          name="snapshot-group"
          type="radio"
          value="option1"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
      >
        Option 1
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
    >
      <span
        class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          name="snapshot-group"
          type="radio"
          value="option2"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
      >
        Option 2
      </span>
    </label>
    <label
      class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled MuiRadio-root MuiRadio-colorSecondary css-a9kjq3-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
        tabindex="-1"
      >
        <input
          class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
          disabled=""
          name="snapshot-group"
          type="radio"
          value="option3"
        />
        <span
          aria-hidden="true"
          class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label Mui-disabled css-p4afvq-MuiTypography-root"
      >
        Option 3
      </span>
    </label>
  </div>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot in real-world scenario - form integration 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiBox-root css-38zrbw"
  >
    <fieldset
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <legend
        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1kmy6r1-MuiFormLabel-root"
      >
        User Preferences
      </legend>
      <div
        class="MuiFormGroup-root MuiRadioGroup-root css-1hhgrml-MuiFormGroup-root"
        role="radiogroup"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="notifications"
              type="radio"
              value="email"
            />
            <span
              aria-hidden="true"
              class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
          >
            Email notifications
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
        >
          <span
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              name="notifications"
              type="radio"
              value="sms"
            />
            <span
              aria-hidden="true"
              class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
          >
            SMS notifications
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled MuiRadio-root MuiRadio-colorSecondary css-a9kjq3-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            tabindex="-1"
          >
            <input
              class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
              disabled=""
              name="notifications"
              type="radio"
              value="none"
            />
            <span
              aria-hidden="true"
              class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label Mui-disabled css-p4afvq-MuiTypography-root"
          >
            No notifications
          </span>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot when checked 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Checked Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot when disabled 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled MuiRadio-root MuiRadio-colorSecondary css-a9kjq3-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
      tabindex="-1"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        disabled=""
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label Mui-disabled css-p4afvq-MuiTypography-root"
    >
      Disabled Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with RadioProps 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        data-testid="custom-radio"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      RadioProps Test
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-0 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      State Test
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-1 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      State Test
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-2 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked Mui-disabled MuiRadio-root MuiRadio-colorSecondary css-a9kjq3-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
      tabindex="-1"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        disabled=""
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label Mui-disabled css-p4afvq-MuiTypography-root"
    >
      State Test
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-3 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      aria-disabled="true"
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-disabled MuiRadio-root MuiRadio-colorSecondary css-a9kjq3-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
      tabindex="-1"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        disabled=""
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label Mui-disabled css-p4afvq-MuiTypography-root"
    >
      State Test
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-4 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        required=""
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <div>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
      >
        State Test
      </span>
      <span
        aria-hidden="true"
        class="MuiFormControlLabel-asterisk css-1jn3qvn-MuiFormControlLabel-asterisk"
      >
         
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with all state combinations > radio-states-combination-5 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd Mui-required css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        required=""
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <div>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
      >
        State Test
      </span>
      <span
        aria-hidden="true"
        class="MuiFormControlLabel-asterisk css-1jn3qvn-MuiFormControlLabel-asterisk"
      >
         
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with complex props and edge cases 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart Mui-required custom-class css-1divhpn-MuiFormControlLabel-root"
    data-testid="complex-radio"
    id="complex-radio"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        name="complex-group"
        required=""
        type="radio"
        value="complex-value"
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <div>
      <span
        class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
      >
        Complex Radio with Special Characters: !@#$%^&*()
      </span>
      <span
        aria-hidden="true"
        class="MuiFormControlLabel-asterisk css-1jn3qvn-MuiFormControlLabel-asterisk"
      >
         
        *
      </span>
    </div>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with default props 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Default Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with labelPlacement variants > radio-placement-bottom 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementBottom css-2el9ly-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Test Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with labelPlacement variants > radio-placement-end 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Test Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with labelPlacement variants > radio-placement-start 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementStart css-1divhpn-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Test Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with labelPlacement variants > radio-placement-top 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <label
    class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementTop css-1lu0jwk-MuiFormControlLabel-root"
  >
    <span
      class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
    >
      <input
        class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
        type="radio"
        value=""
      />
      <span
        aria-hidden="true"
        class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
    >
      Test Radio
    </span>
  </label>
</div>
`;

exports[`DsRadio Component > Snapshot Tests > should match snapshot with nested layout components 1`] = `
<div
  class="MuiBox-root css-0"
  data-mui-color-scheme="light"
>
  <div
    class="MuiBox-root css-hpgf8j"
  >
    <div
      class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
    >
      <label
        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1kmy6r1-MuiFormLabel-root"
      >
        Select Size
      </label>
      <div
        class="MuiFormGroup-root MuiFormGroup-row MuiRadioGroup-root MuiRadioGroup-row css-a8v0cn-MuiFormGroup-root"
        role="radiogroup"
      >
        <div
          class="MuiBox-root css-12z0wuy"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
          >
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                name=":r2k:"
                type="radio"
                value="small"
              />
              <span
                aria-hidden="true"
                class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
            >
              Small
            </span>
          </label>
        </div>
        <div
          class="MuiBox-root css-12z0wuy"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
          >
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary Mui-checked MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                name=":r2k:"
                type="radio"
                value="medium"
              />
              <span
                aria-hidden="true"
                class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-radio-button-line css-4s0voj-MuiIcon-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
            >
              Medium
            </span>
          </label>
        </div>
        <div
          class="MuiBox-root css-12z0wuy"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1dw706d-MuiFormControlLabel-root"
          >
            <span
              class="MuiButtonBase-root MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorSecondary MuiRadio-root MuiRadio-colorSecondary css-csrrtk-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                name=":r2k:"
                type="radio"
                value="large"
              />
              <span
                aria-hidden="true"
                class="notranslate MuiIcon-root MuiIcon-fontSizeMedium ri-checkbox-blank-circle-line css-4s0voj-MuiIcon-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-bodyRegularMedium MuiFormControlLabel-label css-p4afvq-MuiTypography-root"
            >
              Large
            </span>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;
